tests/valid/comments/single_line.fig
// This is a single-line comment
func main() -> ok
    let x = 42
    pass
