tests/invalid/syntax/continue_outside_loop.fig
// Invalid: Continue outside of loop
func invalid_continue() -> ok
    let x = 5
    if x > 3
        continue
    pass
